--- a/Login/sign_up.html
+++ b/Login/sign_up.html
@@ -16,7 +16,7 @@
   <section class="registration-content">
     <header class="registration-header">
       <img
-        src="https://cdn.builder.io/api/v1/image/assets/TEMP/a5ada6c1c762fd5de9c40f838b465f2ae5bff376?placeholderIfAbsent=true"
+        src="https://cdn.builder.io /api/v1/image/assets/TEMP/a5ada6c1c762fd5de9c40f838b465f2ae5bff376?placeholderIfAbsent=true"
         alt="Registration logo"
         class="logo"
       />
