--- a/Datvexe/timchuyenxe.html
+++ b/Datvexe/timchuyenxe.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="timchuyenxestyle.css?v=2">
+  <link rel="stylesheet" href="timchuyenxestyle.css?v=3">
 </head>
 
 <body>
@@ -63,12 +63,22 @@
 
           </div>
         </div>
-        <button type="submit" class="search-button">Tìm chuyến</button>
+             <button type="button" class="search-button" onclick="goToDanhSach()">Tìm chuyến</button>
       </form>
 
     </main>
   </header>
 <script>
+function goToDanhSach() {
+	  const origin = document.getElementById('origin').value;
+	  const destination = document.getElementById('destination').value;
+	  const date = document.getElementById('departure-date').value;
+
+	  // Encode and construct the URL with query parameters
+	  const url = `danhsachcx.html?origin=${encodeURIComponent(origin)}&destination=${encodeURIComponent(destination)}&date=${encodeURIComponent(date)}`;
+
+	  window.location.href = url;
+	}
 document.addEventListener('DOMContentLoaded', function () {
     // Date picker logic
     document.querySelectorAll('.input-group').forEach(group => {
@@ -119,6 +129,20 @@ document.addEventListener('DOMContentLoaded', function () {
         console.error('Error fetching data:', error);
       });
   });
+document.getElementById('timchuyen').addEventListener('click', function () {
+    const diemdi = document.getElementById('diemdi').value;
+    const diemden = document.getElementById('diemden').value;
+    const ngaydi = document.getElementById('ngaydi').value;
+ 
+    if (!diemdi || !diemden || !ngaydi) {
+        alert("Vui lòng chọn đầy đủ điểm đi, điểm đến và ngày đi");
+        return;
+    }
+
+    // Gắn vào URL để truyền sang trang chonghe.html
+    const url = `chonghe.html?diemdi=${encodeURIComponent(diemdi)}&diemden=${encodeURIComponent(diemden)}&ngaydi=${ngaydi}`;
+    window.location.href = url;
+});	
 </script>
 </body>
 
